Hello My environment: XP - Libo BuildID = 300m103 3.4 (Build: 4) Steps to Reproduce: 1. Create a new spreadsheet (or open an existing one containing more than one sheet) 2. Click on the tab of a sheet, other than the first to make it the current one 3. The name box (left dropdown in the formula bar) displays the current cell 4. Click in the name box and then type an valid cell (range) reference other than the current one. For example if the current selection is A1, type B3 Expected result: selection of B3 in the current sheet Actual result: selection of B3 in the first sheet. This is a regression. May be related with id=36848 Indeed, the bug described in 36848 (selection of a named range by his name via the name box) is corrected, but the selection of a cell/range by reference that does not work anymore ... Best regards
I confirm this bad behavior... Keyword regression
->kohei minor bug, might be worth making into an easy hack ?
fixed as fallout out of my other patch for the name box just add the table number as fallback to the address parser