fix for fdo#36963: name box always selects cell in the first sheet

add the current table number as fallback to the address parser for the
case that no table is specified